bin/tests/snapshots/bool_comparison__82b623ef0ecd1e0e70c1dbe39f028326_lint_errfmt.snap
---
source: bin/tests/bool_comparison.rs
---
true == true
---
<temp_file_path>>1:1:W:1:Equality comparison between boolean literals
