bin/tests/snapshots/bool_comparison__82b623ef0ecd1e0e70c1dbe39f028326_lint_json.snap
---
source: bin/tests/bool_comparison.rs
---
true == true
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "bool_comparison",
      "note": "Equality comparison between boolean literals",
      "code": 1,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 1,
              "column": 1
            },
            "to": {
              "line": 1,
              "column": 13
            }
          },
          "message": "Equality comparison between boolean literals",
          "suggestion": null,
          "fixable": false
        }
      ]
    }
  ]
}
