bin/tests/snapshots/bool_comparison__82b623ef0ecd1e0e70c1dbe39f028326_lint_stderr.snap
---
source: bin/tests/bool_comparison.rs
---
true == true
---
[01] Warning: Equality comparison between boolean literals
   ╭─[ <temp_file_path>:1:1 ]
   │
 1 │ true == true
   │ ──────┬─────  
   │       ╰─────── Equality comparison between boolean literals
───╯
