bin/tests/snapshots/bool_comparison__852249844e4f5e03707d323181ca8645_lint_errfmt.snap
---
source: bin/tests/bool_comparison.rs
---
true != true
---
<temp_file_path>>1:1:W:1:Equality comparison between boolean literals
