bin/tests/snapshots/bool_comparison__852249844e4f5e03707d323181ca8645_lint_json.snap
---
source: bin/tests/bool_comparison.rs
---
true != true
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "bool_comparison",
      "note": "Equality comparison between boolean literals",
      "code": 1,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 1,
              "column": 1
            },
            "to": {
              "line": 1,
              "column": 13
            }
          },
          "message": "Equality comparison between boolean literals",
          "suggestion": null,
          "fixable": false
        }
      ]
    }
  ]
}
