bin/tests/snapshots/bool_comparison__852249844e4f5e03707d323181ca8645_lint_stderr.snap
---
source: bin/tests/bool_comparison.rs
---
true != true
---
[bool_comparison] Warning: Equality comparison between boolean literals
   ╭─[ <temp_file_path>:1:1 ]
   │
 1 │ true != true
   │ ──────┬─────  
   │       ╰─────── Equality comparison between boolean literals
───╯
