bin/tests/snapshots/bool_comparison__ba56854c55bd3954b56d4e0c3d32b65c_lint.snap
---
source: bin/tests/bool_comparison.rs
---
false == true
---
[01] Warning: Equality comparison between boolean literals
   ╭─[ <temp_file_path>:1:1 ]
   │
 1 │ false == true
   │ ──────┬──────  
   │       ╰──────── Equality comparison between boolean literals
───╯
