bin/tests/snapshots/bool_comparison__ba56854c55bd3954b56d4e0c3d32b65c_lint_errfmt.snap
---
source: bin/tests/bool_comparison.rs
---
false == true
---
<temp_file_path>>1:1:W:1:Equality comparison between boolean literals
