bin/tests/snapshots/bool_comparison__ba56854c55bd3954b56d4e0c3d32b65c_lint_json.snap
---
source: bin/tests/bool_comparison.rs
---
false == true
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "bool_comparison",
      "note": "Equality comparison between boolean literals",
      "code": 1,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 1,
              "column": 1
            },
            "to": {
              "line": 1,
              "column": 14
            }
          },
          "message": "Equality comparison between boolean literals",
          "suggestion": null,
          "fixable": false
        }
      ]
    }
  ]
}
